@@ -28,11 +28,10 @@ import com.gengoai.io.resource.Resource;
 import com.gengoai.json.Json;
 import com.gengoai.sql.NamedPreparedStatement;
 import com.gengoai.sql.SQL;
-import com.gengoai.sql.SQLExecutor;
-import com.gengoai.sql.constraint.ColumnConstraint;
+import com.gengoai.sql.SQLContext;
+import com.gengoai.sql.SQLiteDialect;
 import com.gengoai.sql.object.*;
 import com.gengoai.sql.sqlite.SQLiteConnectionRegistry;
-import com.gengoai.sql.sqlite.SQLiteDialect;
 import com.gengoai.sql.statement.InsertType;
 import com.gengoai.sql.statement.Select;
 import com.gengoai.stream.MStream;
@@ -55,11 +54,12 @@ public class SQLiteDataSet extends DataSet {
    private static final long serialVersionUID = 1L;
    private static final String SIZE_NAME = "__size__";
    private static final Column json = new Column("json", "JSON");
-   private static final Column name = new Column("name", "TEXT", List.of(ColumnConstraint.primaryKey()));
+   private static final Column name = new Column("name", "TEXT").primaryKey();
    private static final Column value = new Column("value", "BLOB");
-   private static final Table dataTable = new Table("data", List.of(json));
-   private static final Table metadataTable = new Table("metadata", List.of(name, value));
-   private final SQLExecutor executor;
+   private static final Table dataTable = new Table("data", null, List.of(json), Collections.emptyList());
+   private static final Table metadataTable = new Table("metadata", null, List.of(name, value), Collections
+         .emptyList());
+   private final SQLContext executor;
    private boolean isShuffled = false;
 
    @SneakyThrows
@@ -70,52 +70,54 @@ public class SQLiteDataSet extends DataSet {
    @SneakyThrows
    public SQLiteDataSet(@NonNull Resource location, @NonNull Stream<Datum> stream) {
       this(location);
-      executor.batchUpdate(dataTable.insert(),
-                           stream,
-                           (d, nps) -> nps.setString(json.getName(), Json.dumps(d)), 1000);
+      dataTable.insert()
+               .batch(executor,
+                      stream,
+                      (d, nps) -> nps.setString(json.getName(), Json.dumps(d)),
+                      1000);
    }
 
    @SneakyThrows
    public SQLiteDataSet(@NonNull Resource dataset) {
-      this.executor = SQLExecutor.create(
+      this.executor = SQLContext.create(
             SQLiteConnectionRegistry.getConnection("jdbc:sqlite:" + Strings.prependIfNotPresent(dataset.path(),
                                                                                                 "/")),
-            SQLiteDialect.INSTANCE);
-      if(!executor.exists(dataTable)) {
-         executor.update(dataTable.create());
+            new SQLiteDialect());
+      if (!dataTable.exists(executor)) {
+         dataTable.createIfNotExists(executor);
       }
-      if(!executor.exists(metadataTable)) {
-         executor.batchUpdate(metadataTable.create(),
-                              metadataTable.insert(InsertType.INSERT_OR_REPLACE)
-                                           .values(SQL.L(SIZE_NAME), SQL.N(0)),
-                              Trigger.builder()
-                                     .name("data_insert_size_inc")
-                                     .table(dataTable)
-                                     .operation(SQLDMLOperation.INSERT)
-                                     .when(TriggerTime.AFTER)
-                                     .updateStatement(metadataTable.update()
-                                                                   .set(value,
-                                                                        SQL.sql("cast(value as INTEGER)+1"))
-                                                                   .where(name.eq(SQL.L(SIZE_NAME))))
-                                     .build().create(),
-                              Trigger.builder()
-                                     .name("data_dete_size_dec")
-                                     .table(dataTable)
-                                     .operation(SQLDMLOperation.DELETE)
-                                     .when(TriggerTime.AFTER)
-                                     .updateStatement(metadataTable.update()
-                                                                   .set(value,
-                                                                        SQL.sql("cast(value as INTEGER)-1"))
-                                                                   .where(name.eq(SQL.L(SIZE_NAME))))
-                                     .build().create()
-                             );
+      if (!metadataTable.exists(executor)) {
+         executor.batch(metadataTable.create(),
+                        metadataTable.insert(InsertType.INSERT_OR_REPLACE)
+                                     .values(SQL.L(SIZE_NAME), SQL.N(0)),
+                        Trigger.builder()
+                               .name("data_insert_size_inc")
+                               .table(dataTable)
+                               .operation(SQLDMLOperation.INSERT)
+                               .when(TriggerTime.AFTER)
+                               .updateStatement(metadataTable.update()
+                                                             .set(value,
+                                                                  SQL.sql("cast(value as INTEGER)+1"))
+                                                             .where(name.eq(SQL.L(SIZE_NAME))))
+                               .build().create(),
+                        Trigger.builder()
+                               .name("data_delete_size_dec")
+                               .table(dataTable)
+                               .operation(SQLDMLOperation.DELETE)
+                               .when(TriggerTime.AFTER)
+                               .updateStatement(metadataTable.update()
+                                                             .set(value,
+                                                                  SQL.sql("cast(value as INTEGER)-1"))
+                                                             .where(name.eq(SQL.L(SIZE_NAME))))
+                               .build().create()
+         );
       } else {
-         Stream<Map<String, ?>> stream = executor.query(metadataTable.select(name, value)
-                                                                     .where(name.neq(SQL.L(SIZE_NAME))),
-                                                        r -> Map.of(r.getString(name.getName()),
-                                                                    r.getObject(value.getName())));
+         Stream<Map<String, ?>> stream = metadataTable.select(name, value)
+                                                      .where(name.neq(SQL.L(SIZE_NAME)))
+                                                      .query(executor, r -> Map.of(r.getString(name.getName()),
+                                                                                   r.getObject(value.getName())));
          stream.forEach(m -> m.forEach(Unchecked.biConsumer((source, metadata) -> {
-            if(source.equals("ndArrayFactory")) {
+            if (source.equals("ndArrayFactory")) {
                super.ndArrayFactory = NDArrayFactory.valueOf(metadata.toString());
             } else {
                super.metadata.put(source, Json.parse(metadata.toString(), ObservationMetadata.class));
@@ -137,11 +139,11 @@ public class SQLiteDataSet extends DataSet {
 
          @Override
          public DataSet next() {
-            if(!itr.hasNext()) {
+            if (!itr.hasNext()) {
                throw new NoSuchElementException();
             }
             List<Datum> data = new ArrayList<>();
-            while(itr.hasNext() && data.size() < batchSize) {
+            while (itr.hasNext() && data.size() < batchSize) {
                data.add(itr.next());
             }
             return new InMemoryDataSet(data);
@@ -168,27 +170,23 @@ public class SQLiteDataSet extends DataSet {
    @Override
    public DataSet map(@NonNull SerializableFunction<? super Datum, ? extends Datum> function) {
       final Connection connection = executor.getConnection();
-      try(NamedPreparedStatement preparedStatement = new NamedPreparedStatement(connection, dataTable.update()
-                                                                                                     .set(json,
-                                                                                                          SQL.namedArgument(
-                                                                                                                "json"))
-                                                                                                     .where(SQL.C(
-                                                                                                           "rowid")
-                                                                                                               .eq(SQL.namedArgument(
-                                                                                                                     "rowid")))
-                                                                                                     .toSQL(executor.getDialect()))) {
-         AtomicLong processed = new AtomicLong(0);
 
+      try (NamedPreparedStatement preparedStatement =
+                 new NamedPreparedStatement(connection, executor
+                       .render(dataTable.update().set(json, SQL.namedArgument("json"))
+                                        .where(SQL.C("rowid").eq(SQL.namedArgument("rowid")))))) {
+
+         AtomicLong processed = new AtomicLong(0);
          boolean isAutoCommit = connection.getAutoCommit();
          connection.setAutoCommit(false);
          parallelIdStream().forEach(Unchecked.consumer(t -> {
             long id = t.v1;
             Datum datum = function.apply(t.v2);
-            synchronized(this) {
+            synchronized (this) {
                preparedStatement.setObject("json", Json.dumps(datum));
                preparedStatement.setLong("rowid", id);
                preparedStatement.addBatch();
-               if(processed.incrementAndGet() % SQLExecutor.DEFAULT_BATCH_SIZE == 0) {
+               if (processed.incrementAndGet() % SQLContext.DEFAULT_BATCH_SIZE == 0) {
                   preparedStatement.executeBatch();
                   connection.commit();
                   processed.set(0);
@@ -196,12 +194,12 @@ public class SQLiteDataSet extends DataSet {
             }
          }));
 
-         if(processed.get() > 0) {
+         if (processed.get() > 0) {
             preparedStatement.executeBatch();
             connection.commit();
          }
          connection.setAutoCommit(isAutoCommit);
-      } catch(SQLException e) {
+      } catch (SQLException e) {
          throw new RuntimeException(e);
       }
       return this;
@@ -209,32 +207,33 @@ public class SQLiteDataSet extends DataSet {
 
    @SneakyThrows
    public MStream<Tuple2<Long, Datum>> parallelIdStream() {
-      return StreamingContext.local()
-                             .stream(executor.<Tuple2<Long, Datum>>parallelQuery(dataTable.select("rowid",
-                                                                                                  json.getName()),
-                                                                                 resultSet -> {
-                                                                                    long id = resultSet.getLong("rowid");
-                                                                                    Datum datum = Json.parse(resultSet.getString(
-                                                                                          json.getName()), Datum.class);
-                                                                                    return $(id, datum);
-                                                                                 },
-                                                                                 "rowid"));
+      return StreamingContext.local().stream(dataTable.select("rowid", json.getName())
+                                                      .queryParallel(executor,
+                                                                     resultSet -> {
+                                                                        long id = resultSet
+                                                                              .getLong("rowid");
+                                                                        Datum datum = Json
+                                                                              .parse(resultSet.getString(
+                                                                                    json.getName()), Datum.class);
+                                                                        return $(id, datum);
+                                                                     },
+                                                                     "rowid"));
    }
 
    @Override
    @SneakyThrows
    public MStream<Datum> parallelStream() {
-      return StreamingContext.local().stream(executor.<Datum>parallelQuery(select(),
-                                                                           resultSet -> Json.parse(resultSet.getString(1),
-                                                                                                   Datum.class),
-                                                                           "rowid"));
+      return StreamingContext.local().stream(select().queryParallel(executor,
+                                                                    resultSet -> Json.parse(resultSet
+                                                                                                  .getString(1), Datum.class),
+                                                                    "rowid"));
    }
 
    @SneakyThrows
    @Override
    public DataSet persist(@NonNull Resource copy) {
-      String cmd = String.format("VACUUM main INTO '%s'", copy.path());
-      executor.update(SQL.update(cmd));
+      SQL.update(String.format("VACUUM main INTO '%s'", copy.path()))
+         .update(executor);
       return new SQLiteDataSet(copy);
    }
 
@@ -242,12 +241,13 @@ public class SQLiteDataSet extends DataSet {
    @SneakyThrows
    public DataSet putAllMetadata(@NonNull Map<String, ObservationMetadata> metadata) {
       super.putAllMetadata(metadata);
-      executor.batchUpdate(metadataTable.insert(InsertType.INSERT_OR_REPLACE),
-                           metadata.entrySet(),
-                           (e, nps) -> {
-                              nps.setString(name.getName(), e.getKey());
-                              nps.setObject(value.getName(), Json.dumps(e.getValue()));
-                           });
+      metadataTable.insert(InsertType.INSERT_OR_REPLACE)
+                   .batch(executor,
+                          metadata.entrySet(),
+                          (e, nps) -> {
+                             nps.setString(name.getName(), e.getKey());
+                             nps.setObject(value.getName(), Json.dumps(e.getValue()));
+                          });
       return this;
    }
 
@@ -255,12 +255,12 @@ public class SQLiteDataSet extends DataSet {
    @SneakyThrows
    public DataSet removeMetadata(@NonNull String source) {
       super.removeMetadata(source);
-      executor.update(metadataTable.delete(name.eq(SQL.L(source))));
+      metadataTable.delete(executor, name.eq(SQL.L(source)));
       return this;
    }
 
    private Select select() {
-      if(isShuffled) {
+      if (isShuffled) {
          return dataTable.selectAll().orderBy(SQL.F.random());
       }
       return dataTable.selectAll();
@@ -270,8 +270,9 @@ public class SQLiteDataSet extends DataSet {
    @SneakyThrows
    public DataSet setNDArrayFactory(@NonNull NDArrayFactory ndArrayFactory) {
       super.setNDArrayFactory(ndArrayFactory);
-      executor.update(metadataTable.insert(InsertType.INSERT_OR_REPLACE)
-                                   .values(SQL.L("ndArrayFactory"), SQL.L(ndArrayFactory.name())));
+      metadataTable.insert(InsertType.INSERT_OR_REPLACE)
+                   .values(SQL.L("ndArrayFactory"), SQL.L(ndArrayFactory.name()))
+                   .update(executor);
       return this;
    }
 
@@ -284,25 +285,27 @@ public class SQLiteDataSet extends DataSet {
    @Override
    @SneakyThrows
    public long size() {
-      return executor.scalarLong(metadataTable.select(value)
-                                              .where(name.eq(SQL.L(SIZE_NAME))));
+      return metadataTable.select(value)
+                          .where(name.eq(SQL.L(SIZE_NAME)))
+                          .queryScalarLong(executor);
    }
 
    @Override
    @SneakyThrows
    public MStream<Datum> stream() {
       return StreamingContext.local()
-                             .stream(executor.<Datum>query(select(), resultSet -> Json.parse(resultSet.getString(1),
-                                                                                             Datum.class)));
+                             .stream(select().query(executor,
+                                                    resultSet -> Json.parse(resultSet.getString(1), Datum.class)));
    }
 
    @Override
    @SneakyThrows
    public DataSet updateMetadata(@NonNull String source, @NonNull Consumer<ObservationMetadata> updater) {
       super.updateMetadata(source, updater);
-      executor.update(metadataTable.insert(InsertType.INSERT_OR_REPLACE),
-                      Map.of(name.getName(), source,
-                             value.getName(), Json.dumps(getMetadata(source))));
+      metadataTable.insert(InsertType.INSERT_OR_REPLACE)
+                   .update(executor,
+                           Map.of(name.getName(), source,
+                                  value.getName(), Json.dumps(getMetadata(source))));
       return this;
    }
 }//END OF SQLiteDataSet
