@@ -22,12 +22,10 @@ package com.gengoai.hermes.ml;
 import com.gengoai.apollo.math.linalg.NDArray;
 import com.gengoai.apollo.ml.DataSet;
 import com.gengoai.apollo.ml.Datum;
-import com.gengoai.apollo.ml.model.LabelType;
-import com.gengoai.apollo.ml.model.Model;
-import com.gengoai.apollo.ml.model.TensorFlowModel;
-import com.gengoai.apollo.ml.model.TensorUtils;
+import com.gengoai.apollo.ml.encoder.NoOptEncoder;
+import com.gengoai.apollo.ml.model.*;
+import com.gengoai.apollo.ml.observation.Observation;
 import com.gengoai.apollo.ml.observation.Variable;
-import com.gengoai.apollo.ml.transform.Transformer;
 import com.gengoai.collection.Iterators;
 import com.gengoai.collection.Maps;
 import com.gengoai.hermes.Annotation;
@@ -38,7 +36,6 @@ import org.tensorflow.Tensor;
 
 import java.util.Collections;
 import java.util.Map;
-import java.util.Set;
 
 import static com.gengoai.tuple.Tuples.$;
 
@@ -50,9 +47,8 @@ public class ElmoTokenEmbedding extends TensorFlowModel implements HStringMLMode
    private static final long serialVersionUID = 1L;
 
    public ElmoTokenEmbedding() {
-      super(Set.of(Datum.DEFAULT_INPUT),
-            Maps.linkedHashMapOf($(Datum.DEFAULT_INPUT, OUTPUT)),
-            Collections.emptyMap());
+      super(Map.of(Datum.DEFAULT_INPUT, TFVarSpec.varSpec(TOKENS, NoOptEncoder.INSTANCE, -1)),
+            Maps.linkedHashMapOf($(Datum.DEFAULT_INPUT, TFVarSpec.varSpec(OUTPUT, NoOptEncoder.INSTANCE, -1))));
    }
 
    @Override
@@ -75,8 +71,8 @@ public class ElmoTokenEmbedding extends TensorFlowModel implements HStringMLMode
    }
 
    @Override
-   protected Transformer createTransformer() {
-      return new Transformer(Collections.emptyList());
+   protected Observation decodeNDArray(String name, NDArray ndArray) {
+      return ndArray;
    }
 
    @Override
